networking/traefik-edge/sauvage-bot-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: sauvage-bot-ext
  namespace: traefik-edge
spec:
  type: ExternalName
  externalName: sauvage-bot.sauvage-bot.svc.cluster.local
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sauvage-bot-strip-auth-headers
  namespace: traefik-edge
spec:
  headers:
    customRequestHeaders:
      X-Auth-Request-Email: ""
      X-Auth-Request-Groups: ""
      X-Auth-Request-User: ""
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: edge-sauvage-bot-public
  namespace: traefik-edge
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sauvage-bot.e-dani.com
    external-dns.alpha.kubernetes.io/target: 141.94.73.52,141.94.73.50,145.239.194.168,57.129.17.172
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-edge
  routes:
    - kind: Rule
      match: Host(`sauvage-bot.e-dani.com`)
      middlewares:
        - name: sauvage-bot-strip-auth-headers
      services:
        - name: sauvage-bot-ext
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik-edge
